<resources>
    <string name="app_name">MeatHub</string>
    <!--TODO for login-->
    <!--string for modern ui-->
    <string name="login_email_hint">Enter Email</string>
    <string name="login_mobile_hint">Enter Mobile</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="new_password_hint">New</string>
    <string name="retype_password_hint">Retype New</string>
    <string name="change_password_hint">Password</string>
    <string name="rechange_password_hint">Re-Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_reenter_pass">Re-Enter Password</string>
    <string name="enter_oyp">Enter otp for verification</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <!--TODO for contact us-->
    <string name="contact_us">Contact Us</string>
    <string name="tv_email">akram@gmail.com</string>

    <!--TODO for faq-->
    <string name="faq">Faq</string>
    <string name="tv_faq_line">our general web content start at 4.8
        centsper word and if you order more than 3500
        words a 10% discount per will be applied</string>

    <!--TODO for notification-->
    <string name="notification">Notification</string>
    <string name="tv_notf_date">06/02/22</string>
    <string name="tv_notf_time">12:09am</string>
</resources>