<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/notification_lLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_1sdp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:background="@drawable/notification_layout_curve"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">
    <TextView
        android:id="@+id/tv_notification_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_15sdp"
        android:text="@string/tv_faq_line">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notf_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_notf_date"
            android:textColor="@color/black"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="start"
            android:layout_weight="1">
        </TextView>
        <TextView
            android:id="@+id/notf_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_notf_time"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_gravity="end"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="end"
            android:layout_weight="1">
        </TextView>
    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>