<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".activity.login.ReEnterPassActivity">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/tv_reenter_pass" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/new_password_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password1"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:fontFamily="@font/product_sans_regular"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/retype_password_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password2"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_regular"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/btn_submit" />
            <ProgressBar
                android:id="@+id/loading_login_button"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content">

            </ProgressBar>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>