<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".activity.login.Login2Activity">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/product_sans_bold"
            android:text="Login2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="10dp"
            android:hint="Enter Mobile"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_mobile"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:fontFamily="@font/product_sans_regular"
                android:layout_height="wrap_content"
                android:maxLines="1" />
            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/btn_proceed" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_password_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/product_sans_regular"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="Login" />
            <ProgressBar
                android:id="@+id/loading_login_button"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content">

            </ProgressBar>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forget_password_link"
            style="@style/viewParent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/forgot_pass"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/newsMoreTextSize" />

    </LinearLayout>



</LinearLayout>